removed release keys and updated header template

--- a/branding/supplemental-ui/suma/susecom-2022/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom-2022/partials/header-content.hbs
@@ -50,7 +50,7 @@
             </svg>
           </span>
       </a>
-    <div id="topbar-nav" class="navbar-menu">
+   <!--   <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
 
         </div>
@@ -70,7 +70,7 @@
           <span class="control">
           </span>
         </div>
-      </div>
+      </div> -->
     </div>
   </nav>
 </header>
