--- a/branding/supplemental-ui/suma/susecom-branding-2021/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom-branding-2021/partials/header-content.hbs
@@ -21,9 +21,9 @@
               <div class="navbar-item has-dropdown is-hoverable">
                   <div class="navbar-link"><img src="{{uiRootPath}}/img/resources.png" class="langIcon Resurces" alt="Resources" title="Resources"></div>
                   <div class="navbar-dropdown">
-                      <!--  <div class="navbar-item"><strong>Resources</strong></div> -->
+                      <!--  <div class="navbar-item"><strong>Resources</strong></div>
                       <a class="navbar-item" href="https://github.com/uyuni-project/uyuni-docs"><i
-                              class="fab fa-github"></i>&nbsp;uyuni-docs</a>
+                              class="fab fa-github"></i>&nbsp;uyuni-docs</a> -->
                       <a class="navbar-item" href="https://bugzilla.suse.com/enter_bug.cgi?product=SUSE%20Manager%20{{productnumber}}&amp;component=Documentation&amp;short_desc=%5Bdoc%5D%20Issue%20in%20%22SUSE%20Manager%20Guide%22&amp;comment=SUSE%20Manager%20Guide%3A%0A%0A"><i
                               class="fas fa-bug"></i>&nbsp;Report Issue</a>
                       <a class="navbar-item"
