--- a/branding/supplemental-ui/suma/susecom-2022/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom-2022/partials/header-content.hbs
@@ -1,7 +1,10 @@
 <header class="header">
   <nav class="navbar">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="{{{or site.url siteRootPath}}}">{{site.title}}</a>
+   <div class="navbar-brand">
+            <div class="navbar-item">
+                <a class=" navbar-logo" href="https://documentation.suse.com/suma/"><img
+                        class="logo" src="{{uiRootPath}}/img/suse-white-logo-green2.png"/></a>
+            </div>
       {{#if env.SITE_SEARCH_PROVIDER}}
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
