--- a/branding/supplemental-ui/suma/susecom-2022/css/search.css
+++ b/branding/supplemental-ui/suma/susecom-2022/css/search.css
@@ -68,8 +68,8 @@
 }
 
 .search-result-highlight {
-  color: #174d8c;
-  background: rgba(143, 187, 237, 0.1);
+  color: Black;
+  background: #EFEFEF;
   padding: 0.1em 0.05em;
   font-weight: 500;
 }
