--- a/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
@@ -3,9 +3,11 @@ i.fa[title='Note'] {
   font-family: inherit;
 }
 
-i.fa[title='Important'] {
+/* i.fa[title='Important'] {
   font-family: inherit;
-}
+} */
+
+
 
 i.fa[title='Warning'] {
   font-family: inherit;
@@ -34,7 +36,7 @@ i.fa[title='Warning'] {
 #twitter-link {
   float: right;
   border-bottom-style: solid;
-  border-bottom-color: #33ba78;
+  /* border-bottom-color: #33ba78; */
   border-bottom-width: 2px;
 }
 
@@ -47,10 +49,15 @@ i.fa[title='Warning'] {
   background-color: #0b322c;
 }
 
+
 /* navigation buttons top nav */
 .navbar .button {
   border: none;
   background-color: #e9644e;
+}
+
+.nav-panel-explore .context {
+  display: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -58,6 +65,10 @@ i.fa[title='Warning'] {
     background-color: #ff6a52;
     color: #fff;
   }
+}
+
+.nav-container {
+  width: max-content;
 }
 
 @media screen and (min-width: 1024px) {
@@ -69,11 +80,14 @@ i.fa[title='Warning'] {
 
 /* Nav menu */
 .nav-menu {
-  background-color: #f2f2f2;
+  background-color: #efefef;
+  line-height: 22px;
+  padding: 0.25rem 0.5rem;
 }
 
 .nav-menu a {
   color: #0a322c;
+  font-weight: 500;
 }
 
 .navbar-link {
@@ -84,18 +98,25 @@ i.fa[title='Warning'] {
   background-color: #33ba78;
 }
 
-/* Top navbar border */
+/* Dropdown menu border color */
 div#topbar-nav {
   border-bottom-style: solid;
   border-bottom-width: 2px;
-  border-bottom-color: #32ba78;
+  border-bottom-color: #0C322C;
+}
+/* Dropdown menu border hover */
+div#topbar-nav :hover {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #0C322C;
 }
 
-/* Fix for border on brand */
+/* Brand border color */
 .navbar-brand {
   border-bottom-style: solid;
   border-bottom-width: 2px;
-  border-bottom-color: #32ba78;
+  border-bottom-color: #0C322C;
+
 }
 
 /* navbar background color */
@@ -111,51 +132,52 @@ a.navbar-logo {
 
 /* Tool bar */
 .toolbar a {
-  color: #2453FF;
+  color: #0C322C;
 }
 
 .toolbar .edit-this-page a {
-  color: #2453FF;
+  color: #0C322C;
 }
 
 .toolbar {
-  background-color: #f2f2f2;
+  background-color: #efefef;
 }
 
 /* left nav panel */
 .nav-panel-menu {
-  background-color: #f2f2f2;
+  background-color: #efefef;
 }
 
 .panels {
-  background-color: #0a322c;
+  background-color: #EFEFEF;
 }
 
 /* Left Nav Link styles  */
 .is-current-page>.nav-link, .is-current-page>.nav-text {
-  font-weight: 300;
+  font-weight: 700;
   color: #fff;
   background-color: #33ba78;
-  text-decoration: none;
-  border-radius: 4px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 6px;
+  padding-right: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  line-height: 1.8;
 }
-
 
 /* Link hover */
 a:hover {
-  color: #33ba78;
-  text-decoration: none;
+  color: #0C322C;
+  text-decoration: underline;
 }
 
 .toc-link.is-active-link {
   font-weight: 600;
-  color: #00D35F;
+  color: #0C322C;
 }
 
 .doc a, .doc a:visited {
-  color: #2553FF;
+  color: #26915e;
+  
 }
 
 .doc pre.highlight code, .doc pre:not(.highlight) {
@@ -163,36 +185,63 @@ background-color: #0a322c;
   border-radius: 12px;
 }
 
-.doc a:hover {
-  color: #3dd35f;
+/* Plain links in paragraphs and body */
+.doc a.bare {
+  color:  #26915e;
+  font-weight: 500;
 }
 
-/*.toolbar {
-  color: #686565;
-  background-color: #e0dfdf;
-  -webkit-box-shadow: 0 1px 0 #e1e1e1;
-  box-shadow: 0 1px 0 #e1e1e1;
+.doc a.bare :hover {
+  color: #26915e;
 }
-*/
+
+/* TOC links and heading links */
+.doc a, .doc a:visited {
+  color: #26915e;
+}
+
+.doc a:hover {
+  color: #26915e;
+}
+
+.doc .listingblock pre:not(.highlight), .doc .literalblock pre, .doc pre.highlight code {
+  background: #0c322c;
+  -webkit-box-shadow: inset 0 0 1.75px #e1e1e1;
+  box-shadow: inset 0 0 1.75px #e1e1e1;
+  display: block;
+  overflow-x: auto;
+  padding: .75rem;
+  color: #bfcbfb;
+  border-radius: 0;
+}
 
 .logo {
-  padding-top: 10px;
-  max-height: 50px;
+  width: 171px;
+  height: 57px;
+  top: 0;
+  left: 0;
+  position: sticky;
+  padding: 0;
+  z-index: 12;
 }
 
 /* Heading colors in article */
 h1.page {
-  color: #13c489;
+  color: #0C322C;
+  background-color: #90ebcd5c;
 }
 
 .doc h2 {
-  color: #13c489;
+  color: #0C322C;
 }
 
 .doc h3 {
-  color: #13c489;
+  color: #0C322C;
 }
 
+.nav-menu h3.title {
+  padding: 0.5rem 0 0.125em;
+}
 /* Text legibility */
 html, body {
   text-rendering: optimizeLegibility;
@@ -268,4 +317,151 @@ img.langIcon.korea {
 
 #ko {
   cursor: pointer;
+}
+/* asciidoc button unset parenthesis and weight */
+.doc b.button::before {
+  content: unset;
+}
+
+.doc b.button::after {
+  content: unset;
+}
+
+.doc b.button {
+  font-style: italic;
+  font-weight: 300;
+}
+
+.sidebar .toc-menu a:hover {
+  color: #0C322C;
+  background-color: #EFEFEF;
+  text-decoration: underline;
+}
+
+.sidebar .toc-menu a {
+  color: #0C322C;
+  max-width: fit-content;
+}
+
+.sidebar.toc .toc-menu a {
+  padding-top: 10px;
+}
+
+.toc.sidebar .toc-menu {
+  position: fixed;
+}
+
+.toc .toc-menu a {
+  border-left: unset;
+}
+
+.toc .toc-menu h3 {
+  font-weight: 600;
+}
+
+.breadcrumbs li::after {
+  content: "/";
+  padding: 0 .5rem;
+  color: #30BA78;
+}
+
+nav.pagination a {
+  font-weight: 500;
+  line-height: 1.3;
+  position: relative;
+  color: #0C322C;
+  border: 0.2rem solid #dedfe0;
+  padding: 1.5rem;
+  width: 100%;
+  font-style: italic;
+}
+
+nav.pagination a {
+  color: #0c322c;
+  border-color: #dedfe0;
+}
+
+nav.pagination a :hover {
+  color: #0c322c;
+  border-color: #c0c2c4;
+}
+
+nav.pagination a::after, nav.pagination a::before {
+  color: #0c322c;
+  top: unset;
+}
+
+nav.pagination span::before {
+  color: #0C322C;
+  font-size: .75em;
+  padding-bottom: .1em;
+}
+
+/* Table */
+td, p {
+  color:#0c322c;
+}
+
+tr:last-child {
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  border-bottom-color: #c0c2c4;
+}
+
+.doc table.tableblock thead th {
+  border-bottom: 2.5px solid #c0c2c4;
+  padding: .5rem;
+  background: #dedfe0;
+  border-right: solid 0.5px #c0c2c4;
+  border-top: solid 0.5px #c0c2c4;
+  border-left: solid 0.5px #c0c2c4;
+}
+
+.doc table.tableblock>:not(thead) th,
+.doc table.tableblock td {
+  border-left: solid 1px #c0c2c4;
+  border-right: solid 1px #c0c2c4;
+  padding: .5rem;
+}
+
+tr:nth-child(even) {
+  background: #9a9a9a26;
+}
+
+.doc .admonitionblock>table {
+  border-collapse: unset;
+}
+
+.doc p code {
+  font-family: "Roboto Mono", "RobotoMono", "DejaVu Sans Mono", "DejaVuSansMono", "Menlo", "Andale Mono", monospace;
+  border-bottom: 1px solid #c0c2c4;
+  color: #0C322C;
+  font-weight: 600;
+  background-color: unset;
+  border-radius: unset;
+}
+
+/* dd lists*/
+.doc .dlist dt {
+  font-style: italic;
+  font-weight: 600;
+}
+.doc dl, .doc p {
+  margin: 0 0 17px 0;
+  padding: 0 0 0 30px;
+}
+
+.admonitionblock.note {
+  border-style: solid;
+  border-color: blue;
+}
+
+.doc .admonitionblock.note .icon {
+  float: left;
+  height: 36px;
+  margin-top: 40px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  content: url(/en/_/img/note.svg);
+  /* height: 20px; */
 }
