--- a/branding/supplemental-ui/suma/susecom-2022/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom-2022/partials/header-content.hbs
@@ -3,7 +3,7 @@
    <div class="navbar-brand">
             <div class="navbar-item">
                 <a class=" navbar-logo" href="https://documentation.suse.com/suma/"><img
-                        class="logo" src="{{uiRootPath}}/img/suse-white-logo-green2.png"/></a>
+                        class="logo" src="{{uiRootPath}}/img/logo.svg"/></a>
             </div>
       {{#if env.SITE_SEARCH_PROVIDER}}
       <div class="navbar-item search hide-for-print">
