--- a/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
@@ -1,15 +1,13 @@
 /* admon icons */
-i.fa[title='Note'] {
+i.fa[title='Note:'] {
   font-family: inherit;
 }
 
-/* i.fa[title='Important'] {
+i.fa[title='Important:'] {
   font-family: inherit;
-} */
+}
 
-
-
-i.fa[title='Warning'] {
+i.fa[title='Warning:'] {
   font-family: inherit;
 }
 
@@ -453,15 +451,33 @@ tr:nth-child(even) {
 
 .admonitionblock.note {
   border-style: solid;
-  border-color: blue;
+  border-color: #192072;
 }
 
 .doc .admonitionblock.note .icon {
   float: left;
   height: 36px;
   margin-top: 40px;
+  margin-left: 1.5rem;
   padding-left: 1rem;
-  padding-right: 1rem;
-  content: url(/en/_/img/note.svg);
-  /* height: 20px; */
+  /* padding-right: 3rem; */
+  background-image: url(../img/icon-note.svg);
+  background-color: unset;
+  background-repeat: no-repeat;
+}
+
+.doc .admonitionblock .icon i::after {
+  content: attr(title);
+  padding-left: 20px;
+  color: #0c322c;
+  font-weight: 600;
+  font-family: 'Poppins';
+}
+
+.doc .admonitionblock .icon i {
+  margin-left: 0.5rem;
+}
+
+.doc .admonitionblock td.content {
+  padding-top: 4.5rem;
 }
