--- a/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
@@ -480,3 +480,37 @@ tr:nth-child(even) {
 .doc .admonitionblock td.content {
   padding-top: 4.5rem;
 }
+
+/* Important block styles */
+.admonitionblock.important {
+  border-style: solid;
+  border-color: #2453ff;
+}
+
+.doc .admonitionblock.important .icon {
+  float: left;
+  height: 36px;
+  margin-top: 40px;
+  margin-left: 1.5rem;
+  padding-left: 1rem;
+  background-image: url(../img/important.svg);
+  background-color: unset;
+  background-repeat: no-repeat;
+}
+
+/* Warning block styles */
+.admonitionblock.warning {
+  border-style: solid;
+  border-color: #fe7c3f;
+}
+
+.doc .admonitionblock.warning .icon {
+  float: left;
+  height: 36px;
+  margin-top: 40px;
+  margin-left: 1.5rem;
+  padding-left: 1rem;
+  background-image: url(../img/warning.svg);
+  background-color: unset;
+  background-repeat: no-repeat;
+}
