css and removed test title

--- a/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom-2022/css/site-extra.css
@@ -238,6 +238,7 @@ h1.page {
 
 .nav-menu h3.title {
   padding: 0.5rem 0 0.125em;
+  background-color: #efefef;
 }
 /* Text legibility */
 html, body {
@@ -325,8 +326,9 @@ img.langIcon.korea {
 }
 
 .doc b.button {
-  font-style: italic;
-  font-weight: 300;
+  font-style: normal;
+  font-weight: 600;
+  border-bottom: 1px solid #c0c2c4;
 }
 
 .sidebar .toc-menu a:hover {
@@ -445,7 +447,7 @@ tr:nth-child(even) {
 }
 .doc dl, .doc p {
   margin: 0 0 17px 0;
-  padding: 0 0 0 30px;
+  padding: 0 0 0 5px;
 }
 
 .admonitionblock.note {
@@ -513,4 +515,104 @@ tr:nth-child(even) {
   background-image: url(../img/warning.svg);
   background-color: unset;
   background-repeat: no-repeat;
+}
+
+/* List style */
+
+.arabic {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.arabic {
+  counter-reset: step-counter;
+  margin-bottom: 10px;
+}
+
+ol.arabic>li {
+  counter-reset: nest;
+}
+
+.arabic ol>li:before {
+ /* counter-increment: step-counter;
+  content: counter(step-counter); */
+  margin-right: -26px;
+  margin-top: -3px;
+  font-size: 100%;
+  color: #0C322C;
+  /* background-color: #0C322C; */
+  font-weight: bold;
+  padding: 5px 12px;
+  /* border-radius: 18px; */
+  float: left;
+}
+
+.doc ol.arabic {
+ /* list-style-type: none;*/
+  background-color: #EFEFEF;
+  padding: 25px;
+  padding-left: 70px;
+  padding-right: 50px;
+  border-left: 0.5rem solid #dedfe0;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+.ulist li::before {
+  content: none;
+  padding: 1px 3px;
+  font-size: 50%;
+}
+
+.doc .olist li,
+.doc .ulist li {
+  margin-bottom: 3rem;
+  margin-top: 16px;
+}
+
+.olist p {
+  display: flow-root;
+}
+
+.title {
+  color: white;
+  font-weight: 500;
+  padding-left: 15px;
+  background-color: #0C322C;
+  font-family: 'Poppins';
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+/* toc formatting */
+ul.sectlevel1 {
+  background-color: white;
+}
+
+.doc .olist li, .doc .ulist li {
+  margin-bottom: 2rem;
+  margin-top: 16px;
+}
+.doc .admonitionblock .title {
+ color: white; 
+ margin-bottom: 20px;
+ padding-bottom: 10px;
+ font-weight: 600;
+}
+
+.doc {
+  max-width: 56rem;
+}
+
+.doc .listingblock pre:not(.highlight) {
+  color: #c7f1e3;
+}
+
+::marker {
+  color: #26915e;
+  font-size: large;
+  font-weight: 500;
 }
