--- a/branding/supplemental-ui/uyuni/uyuni-2023/css/site-extra.css
+++ b/branding/supplemental-ui/uyuni/uyuni-2023/css/site-extra.css
@@ -402,6 +402,10 @@ td, p {
   color:#414141;
 }
 
+table {
+  word-wrap: inherit;
+}
+
 tr:last-child {
   border-bottom-width: 2px;
   border-bottom-style: solid;
