updated table overflow

--- a/branding/supplemental-ui/suma/susecom-2023/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom-2023/css/site-extra.css
@@ -401,6 +401,10 @@ td, p {
   color:#0c322c;
 }
 
+table {
+  word-wrap: inherit;
+}
+
 tr:last-child {
   border-bottom-width: 2px;
   border-bottom-style: solid;
