fixes to syntax on tables, and fix for broken table that was eating content

--- a/branding/supplemental-ui/suma/susecom-2023/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom-2023/css/site-extra.css
@@ -414,6 +414,19 @@ td, p {
   color:#0c322c;
 }
 
+.doc .admonitionblock .title, .doc .exampleblock .title, .doc .imageblock .title, .doc .listingblock .title, .doc .literalblock .title, .doc .openblock .title, .doc .tableblock caption {
+  color: white;
+  font-size: .88889rem;
+  font-weight: 500;
+  font-style: normal;
+  -webkit-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+  letter-spacing: .01em;
+  padding-bottom: .075rem;
+  text-align: left;
+}
+
 tr:last-child {
   border-bottom-width: 2px;
   border-bottom-style: solid;
