remove lang selector

--- a/branding/supplemental-ui/suma/webui-2023/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/webui-2023/partials/header-content.hbs
@@ -32,14 +32,13 @@
                               class="fas fa-user-edit"></i>&nbsp;Contribute</a>
                   </div>
               </div>  -->
-                           <div class="navbar-item has-dropdown is-hoverable">
+                        <!--   <div class="navbar-item has-dropdown is-hoverable">
                  <div class="navbar-link"><img src="{{uiRootPath}}/img/language.png" class="langIcon Language" alt="Language" title="Language"></div>
                  <div class="navbar-dropdown">
-                     <!--  </div><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
                      <a role="button" class="navbar-item" id="en" onclick="selectLanguage(this.id)"><img src="{{uiRootPath}}/img/engFlag.svg" class="langIcon english">&nbsp;English</a>
-                     <!-- LANGUAGESELECTOR -->
+                      LANGUAGESELECTOR 
                  </div>
-             </div>
+             </div>-->
                 
           </div>
       </div>
