--- a/branding/supplemental-ui/suma/susecom-2023/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom-2023/partials/header-content.hbs
@@ -2,7 +2,7 @@
   <nav class="navbar">
     <div class="navbar-brand">
       <div class="navbar-item">
-        <a class=" navbar-logo" href="https://documentation.suse.com/suma/"><img class="logo"
+        <a class=" navbar-logo" href="https://documentation.suse.com/mlm/"><img class="logo"
             src="{{uiRootPath}}/img/logo.svg" /></a>
       </div>
       {{#if env.SITE_SEARCH_PROVIDER}}
