--- a/Makefile.j2
+++ b/Makefile.j2
@@ -25,7 +25,7 @@ validate-suma-{{ langcode }}:
 
 .PHONY: pdf-tar-suma-{{ langcode }}
 pdf-tar-suma-{{ langcode }}:
-	$(call pdf-tar-product,{{ langcode }},susemanager-docs_{{ langcode }}-pdf,$(current_dir)/build/{{ langcode }}/pdf)
+	$(call pdf-tar-product,{{ langcode }},suse-multi-linux-manager-docs_{{ langcode }}-pdf,$(current_dir)/build/{{ langcode }}/pdf)
 
 .PHONY: set-html-language-selector-suma-{{ langcode }}
 set-html-language-selector-suma-{{ langcode }}: set-html-language-selector-suma
@@ -53,7 +53,7 @@ antora-suma-{{ langcode }}: configure-suma-branding-dsc-{{langcode}} prepare-ant
 
 .PHONY: obs-packages-suma-{{ langcode }}
 obs-packages-suma-{{ langcode }}: configure-suma-branding-webui-{{langcode}} pdf-all-suma-{{ langcode }} antora-suma-{{ langcode }} ## Generate SUMA OBS tar files
-	$(call obs-packages-product,{{ langcode }},{{ langcode }}/pdf,susemanager-docs_{{ langcode }},susemanager-docs_{{ langcode }}-pdf)
+	$(call obs-packages-product,{{ langcode }},{{ langcode }}/pdf,suse-multi-linux-manager-docs_{{ langcode }},suse-multi-linux-manager-docs_{{ langcode }}-pdf)
 
 # UYUNI
 
