--- a/Makefile.j2
+++ b/Makefile.j2
@@ -53,7 +53,7 @@ antora-suma-{{ langcode }}: configure-suma-branding-dsc-{{langcode}} prepare-ant
 
 .PHONY: obs-packages-suma-{{ langcode }}
 obs-packages-suma-{{ langcode }}: configure-suma-branding-webui-{{langcode}} pdf-all-suma-{{ langcode }} antora-suma-{{ langcode }} ## Generate SUMA OBS tar files
-	$(call obs-packages-product,{{ langcode }},{{ langcode }}/pdf,suse-multi-linux-manager-docs_{{ langcode }},suse-multi-linux-manager-docs_{{ langcode }}-pdf)
+	$(call obs-packages-product,{{ langcode }},{{ langcode }}/pdf,susemanager-docs_{{ langcode }},susemanager-docs_{{ langcode }}-pdf)
 
 # UYUNI
 
