update build for pdf for dsc

--- a/Makefile.j2
+++ b/Makefile.j2
@@ -50,6 +50,7 @@ prepare-antora-mlm-{{ langcode }}: copy-branding-{{ langcode }} set-html-languag
 .PHONY: antora-mlm-{{ langcode }}
 antora-mlm-{{ langcode }}: configure-mlm-branding-dsc-{{langcode}} prepare-antora-mlm-{{ langcode }} pdf-all-mlm-{{ langcode }} pdf-tar-mlm-{{ langcode }}
 	$(call antora-mlm-function,translations/{{ langcode }},{{ langcode }})
+
 	@echo "Running embedded PDF cleanup for {{ langcode }}..."
 
 	@bash -c ' \
@@ -111,7 +112,7 @@ antora-mlm-{{ langcode }}: configure-mlm-branding-dsc-{{langcode}} prepare-antor
 		        # Remove the now empty pdf directory \
 		        rmdir "$$SRC_LOCALE_PDF" 2>/dev/null || true; \
 		    else \
-		        echo "No PDFs found for locale: $$locale"; \
+		        echo "Locale awaiting build...: $$locale"; \
 		    fi; \
 		done; \
 		\
@@ -124,7 +125,6 @@ antora-mlm-{{ langcode }}: configure-mlm-branding-dsc-{{langcode}} prepare-antor
 		\
 		echo "PDF processing complete for {{ langcode }}." \
 	'
-
 
 
 .PHONY: obs-packages-mlm-{{ langcode }}
