--- a/Makefile.j2
+++ b/Makefile.j2
@@ -48,7 +48,7 @@ prepare-antora-mlm-{{ langcode }}: copy-branding-{{ langcode }} set-html-languag
 	cd $(current_dir)
 
 .PHONY: antora-mlm-{{ langcode }}
-antora-mlm-{{ langcode }}: configure-mlm-branding-dsc-{{langcode}} prepare-antora-mlm-{{ langcode }} #pdf-all-mlm-{{ langcode }} #pdf-tar-mlm-{{ langcode }}
+antora-mlm-{{ langcode }}: configure-mlm-branding-dsc-{{langcode}} prepare-antora-mlm-{{ langcode }} pdf-all-mlm-{{ langcode }} pdf-tar-mlm-{{ langcode }}
 	$(call antora-mlm-function,translations/{{ langcode }},{{ langcode }})
 
 
