--- a/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
+++ b/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
@@ -121,7 +121,6 @@ i.fa[title="Tip:"] {
   position: relative;
 }
 
-
 .submenu {
   display: none;
   position: absolute;
@@ -158,7 +157,6 @@ i.fa[title="Tip:"] {
 .submenu a.navbar-item {
   padding: 0.5rem 1rem;
 }
-
 
 /* Dropdown menu border color
 div#topbar-nav {
@@ -219,15 +217,6 @@ a.navbar-logo {
   background-color: #efefef;
 }
 
-.context .version {
-  visibility: hidden; 
-}
-
-.context {
-  visibility: hidden; 
-}
-
-
 .nav-panel-explore .components .component .title a:hover {
   color: #efefef;
 }
@@ -239,7 +228,6 @@ a.navbar-logo {
 .nav-panel-explore .context .title {
   flex: auto;
 }
-
 
 /* Left Nav Link styles  */
 .is-current-page>.nav-link,
@@ -273,24 +261,20 @@ a:hover {
 /* Plain links in paragraphs and body */
 .doc a.bare {
   color: #008657;
-  text-decoration: underline;
 }
 
 .doc a.bare :hover {
   color: #008657;
-  text-decoration: underline;
 }
 
 /* TOC links and heading links */
 .doc a,
 .doc a:visited {
   color: #008657;
-  text-decoration: underline;
 }
 
 .doc a:hover {
   color: #30ba78;
-  text-decoration: underline;
 }
 
 /*
@@ -347,12 +331,10 @@ h1.page {
   color: #0c322c;
 }
 
-
 .nav-menu h3.title {
   padding: 0.5rem 0 0.125em;
   background-color: #efefef;
 }
-  
 
 /* Text legibility */
 html,
@@ -364,12 +346,6 @@ body {
   font-family: "SUSE", "Poppins", sans-serif;
   word-break: keep-all;
 }
-
-/* Font for side toc
-.article-aside {
-  font-family: 'Montserrat', sans-serif;
-}
- */
 
 /* color for pre literal boxes code should use [source, language]*/
 pre {
@@ -451,6 +427,14 @@ img.langIcon.korea {
   font-weight: 600;
   border-bottom: 1px solid #c0c2c4;
 }
+
+/*
+aside.toc.sidebar {
+  background-color: #efefef;
+  padding-right: 15%;
+  padding-left: 1.5rem;
+  margin-right: 0;
+} */
 
 .sidebar .toc-menu a:hover {
   color: #0c322c;
@@ -1179,7 +1163,6 @@ nav.pagination a {
   color: #025937;
 }
 
-
 .nav-panel-explore .components .component .title {
   font-weight: 500;
   background: #efefef;
@@ -1189,6 +1172,13 @@ nav.pagination a {
 .nav-panel-explore .components .component .title a {
   color: #025937;
   font-weight: 800;
+}
+
+.context .version {
+  visibility: hidden;
+}
+.context {
+  visibility: hidden;
 }
 
 .nav-panel-explore .components .component .title a:hover {
@@ -1201,7 +1191,6 @@ nav.pagination a {
   margin-top: .5rem;
   border-top-style: ridge;
 }
-
 
 .navbar-item .visual-search-label {
   color: #025937;
@@ -1219,8 +1208,15 @@ nav.pagination a {
   border-radius: 0rem;
 }
 
-.nav-panel-explore {
-  background: #efefef;
+.doc .procedure {
+  background: #fff;
+  border-left: 2px solid #bff1ea;
+  padding-left: 0rem;
+  padding-top: 0rem;
+  margin-left: 1rem;
 }
 
-
+.doc .procedure .title {
+  background: #bff1ea;
+  color: #00112b;
+}
