fixes nonexpanding menu items

--- a/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
+++ b/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
@@ -122,8 +122,8 @@ i.fa[title="Tip:"] {
 }
 
 .submenu {
-  display: none;
-  position: absolute;
+  /* display: none; */
+  /* position: absolute; */
   left: -50%;
   top: 0;
   background-color: white;
