--- a/site.yml.j2
+++ b/site.yml.j2
@@ -1,12 +1,8 @@
-{% for entity in asciidoc.attributes -%}
-    {% filter indent(0,true) %}
-    {% if entity.attribute == 'productnumber' %}
-    {{ entity.attribute }}: "{{ entity.value }}"
-    {% else %}
-    {{ entity.attribute }}: {{ entity.value }}
-    {% endif %}
-    {% endfilter %}
-{% endfor %}
+{% for entity in asciidoc -%}
+     {% filter indent(0,true) %}
+     {{ entity.attribute }}: {{ entity.value}}
+     {% endfilter %}
+ {% endfor %}
 site:
 {% for i in site -%}
   {% filter indent(0,true) %}
