update navlists to support new branding (#3887)
* update navlists to support new branding

* update

* fix for site.yml.j2

* update

* update branding

--- a/site.yml.j2
+++ b/site.yml.j2
@@ -1,10 +1,6 @@
-{% for entity in asciidoc.attributes -%}
+{% for entity in asciidoc -%}
     {% filter indent(0,true) %}
-    {% if entity.attribute == 'productnumber' %}
-    {{ entity.attribute }}: "{{ entity.value }}"
-    {% else %}
-    {{ entity.attribute }}: {{ entity.value }}
-    {% endif %}
+    {{ entity.attribute }}: {{ entity.value}}
     {% endfilter %}
 {% endfor %}
 site:
